@@ -5,12 +5,12 @@
 	<controls>
 		<control type="group">
 			<centerleft>50%</centerleft>
-			<height>430</height>
+			<height>500</height>
 			<centertop>50%</centertop>
 			<width>1000</width>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="1000" />
-				<param name="height" value="430" />
+				<param name="height" value="500" />
 				<param name="header_label" value="$LOCALIZE[40103]" />
 				<param name="header_id" value="1" />
 			</include>
@@ -19,7 +19,7 @@
 				<top>80</top>
 				<control type="grouplist" id="11100">
 					<width>1000</width>
-					<height>400</height>
+					<height>480</height>
 					<itemgap>0</itemgap>
 					<onup>11100</onup>
 					<ondown>11100</ondown>
@@ -53,7 +53,13 @@
 						<include>DefaultSettingButton</include>
 						<selected>Skin.HasSetting(hide_recordingradio)</selected>
 						<onclick>Skin.ToggleSetting(hide_recordingradio)</onclick>
-					</control>		
+					</control>
+					<control type="radiobutton" id="11116">
+						<label>$LOCALIZE[40097] : $LOCALIZE[40162]</label>
+						<include>DefaultSettingButton</include>
+						<selected>Skin.HasSetting(hide_allradios)</selected>
+						<onclick>Skin.ToggleSetting(hide_allradios)</onclick>
+					</control>			
 				</control>
 			</control>
 		</control>
