@@ -34,37 +34,39 @@
 	<include name="PVRWidget">
 		<control type="image">
 			<top>80</top>
-			<left>16</left>
+			<left>10</left>
 			<width>670</width>
 			<height>225</height>
 			<texture border="21">dialogs/dialog-bg.png</texture>
 		</control>
 		<control type="image">
-			<left>55</left>
+			<left>49</left>
 			<top>122</top>
 			<width>140</width>
 			<height>140</height>
 			<aspectratio>keep</aspectratio>
-			<texture background="true" fallback="DefaultVideo.png">$PARAM[icon]</texture>
+			<texture background="true" fallback="DefaultAddonVideo.png">$PARAM[icon]</texture>
 		</control>
 		<control type="label">
-			<left>225</left>
+			<left>209</left>
 			<top>127</top>
 			<height>25</height>
-			<width>420</width>
+			<width>430</width>
 			<label>$PARAM[header]</label>
 			<aligny>center</aligny>
-			<font>font36_title</font>
+			<font>font30_title</font>
 			<shadowcolor>black</shadowcolor>
+			<scroll>true</scroll>
 		</control>
 		<control type="label">
-			<left>225</left>
-			<top>172</top>
+			<left>209</left>
+			<top>182</top>
 			<height>105</height>
-			<width>420</width>
+			<width>430</width>
 			<label>$PARAM[label1][CR]$PARAM[label2]</label>
 			<font>font12</font>
 			<shadowcolor>black</shadowcolor>
+			<scroll>true</scroll>
 		</control>
 	</include>
 	<include name="WidgetListPoster">
